--- a/src/webapp/WEB-INF/pages/admin/admin.html
+++ b/src/webapp/WEB-INF/pages/admin/admin.html
@@ -5,7 +5,8 @@
     <title>Title</title>
 </head>
 <body>
-<h2>Hi anonymous!</h2>
-<a href="/login">Link to login page</a>
+Admin page
+<br/>
+<a href="/admin/users">List users</a>
 </body>
 </html>
