--- a/src/webapp/WEB-INF/pages/user.html
+++ b/src/webapp/WEB-INF/pages/user.html
@@ -7,6 +7,7 @@
 <body>
 <div>
     <p>Hello User, this Spring Security example</p>
+    <a href="/logout">Link to logout page</a>
 </div>
 </body>
 </html>
