--- a/src/webapp/WEB-INF/pages/admin/admin.html
+++ b/src/webapp/WEB-INF/pages/admin/admin.html
@@ -5,8 +5,9 @@
     <title>Title</title>
 </head>
 <body>
-Admin page
+<h2>Admin page</h2>
 <br/>
-<a href="/admin/users">List users</a>
+<a href="/admin/users">List users</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<a href="/user">User</a>
 </body>
 </html>
