--- a/src/webapp/WEB-INF/pages/index.html
+++ b/src/webapp/WEB-INF/pages/index.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-<h2>Hi anonymous!</h2>
+<h2>Hi anonymous, this is start page!</h2>
 <a href="/login">Link to login page</a>
 </body>
 </html>
