--- a/src/webapp/WEB-INF/pages/admin/users.html
+++ b/src/webapp/WEB-INF/pages/admin/users.html
@@ -11,6 +11,7 @@
         <th>Id</th>
         <th>Name</th>
         <th>Password</th>
+        <th>Roles</th>
         <th>Edit</th>
         <th>Delete</th>
     </tr>
@@ -19,10 +20,17 @@
         <td th:utext="${person.getId()}">Id</td>
         <td th:utext="${person.getName()}">Name</td>
         <td th:utext="${person.getPassword()}">Password</td>
+        <td>
+            <th:block th:each="role : ${person.getRoles()}">
+                <th:block th:utext="${role.getRole()} + ';'">&nbsp;</th:block>
+            </th:block>
+        </td>
         <td><a th:href="@{/admin/users/{id}/edit(id=${person.getId()})}">Edit</a></td>
-        <td><form th:method="DELETE" th:action="@{/admin/users/{id}(id=${person.getId()})}">
-            <input type="submit" value="Delete"/>
-        </form></td>
+        <td>
+            <form th:method="DELETE" th:action="@{/admin/users/{id}(id=${person.getId()})}">
+                <input type="submit" value="Delete"/>
+            </form>
+        </td>
     </tr>
 </table>
 
